Fixed alignment of cube riders

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,9 +16,16 @@ $colorWhite: #ffffff;
 .cube{
   height: 130px;
   background-color: $backgroundCubes;
+  position: relative;
 }
-.flexbox-container {
 
+.rideName{
+  margin: 0 auto;
+  width: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .bottom0{
   position: absolute;
@@ -63,7 +70,12 @@ sup {
 .marginTop20{
   margin-top: 20px;
 }
-
+/*.marginRight5{
+  margin-right: 3px;
+}*/
+.paddingRight5{
+  padding-right: 5px;
+}
 .padding5{
   padding: 5px;
 }
